Fusion reactor beam rendering and doc blocks update update